6.5.2
[fix] playback (No streams found)
[fix] missing metadata
[fix] ended live streams not using mpeg-dash when enabled
[fix] check for and convert unexpected timestamp format

6.5.1
[add] get_live to youtube_requests module to retrieve live stream info for a channel
[add] Adaptive (MP4) and Adaptive (WEBM) to MPEG-DASH - Video quality
[fix] live stream playback
[fix] unable to seek when using mpeg-dash
[fix] mpeg-dash video quality selection
[fix] sqlite requests breaking when another add-on/module uses sqlite3.register_converter(..)
[fix] signal endofdirectory in case of a provider navigation exception |contrib: enen92|

6.5.0
[add] Video quality selection to Settings - MPEG-DASH
[add] Limit to 30fps to Settings - MPEG-DASH
[add] Uploads playlist to channel playlists
[chg] Use search for channel videos instead of the Uploads playlist
[fix] Signature cipher, some videos unplayable (ie. music videos)
[fix] Playback monitoring using Python 3
[fix] unescape html entities in title and plot
[fix] handling of invalid grant when refreshing access token
[fix] adding suggested videos when played from some widgets
[fix] http server /client_ip using Python 3 |contrib: t6|
[upd] refactor youtube_resolver.resolve
[lang] el_gr strings |contrib: twilight0|
[lang] es_es strings |contrib: roliverosc|
[lang] ko_kr strings |contrib: parkmino|

6.4.1
[upd] Use the activation url provided by the authentication request
[add] add Settings - MPEG-DASH - Default to WEBM adaptation set
        - required for 4k stream automatic selection
[add] add Settings - MPEG-DASH - Include VP9.2
        - includes HDR content in the manifest
[add] add support for &hide_folders=true parameter in search query urls
        - when added to the url it will hide the Playlists, Channels, and Live folders
[add] &seek=<time_in_seconds> to play urls
[fix] fix playback of Purchases
[fix] fixed saved playlists that don't belong to a channel
[fix] mpeg-dash frame rate representation