@@ -18,6 +18,7 @@
 [fix] missing metadata
 [fix] ended live streams not using mpeg-dash when enabled
 [fix] check for and convert unexpected timestamp format
+[fix] subscriptions not showing latest videos
         </news>
         <assets>
             <icon>icon.png</icon>
