@@ -3,6 +3,7 @@
 [fix] missing metadata
 [fix] ended live streams not using mpeg-dash when enabled
 [fix] check for and convert unexpected timestamp format
+[fix] subscriptions not showing latest videos
 
 6.5.1
 [add] get_live to youtube_requests module to retrieve live stream info for a channel
